# partomatic

./: .gitignore  README.md  build.bat  build.sh  mkdocs.yml  pyproject.toml  requirements.txt
docs/: automatable_part.md  conf.py  index.md  partomatic.md  partomatic_config.md  putting_it_all_together.md
src/partomatic/: __init__.py  __version__.py  automatable_part.py  buildable_part.py  config_editor_app.py  configurator_app.py  partomatic.py  partomatic_config.py  partomatic_config_editor.py  partomatic_preview.py  partomatic_preview_app.py
tests/: conftest.py  test_automatable_part.py  test_automatablepart.py  test_buildablepart.py  test_config_editor_app.py  test_configurator.py  test_configurator_app_runtime.py  test_partomatic.py  test_partomatic_config.py  test_partomatic_preview.py  test_partomatic_preview_app.py  test_partomaticconfig.py
