[project]
dynamic = ["version"]
name = "partomatic"
authors = [
  { name="x0pherl"},
]
description = "build123d Part extended for CI/CD automation"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/x0pher/partomatic"
Issues = "https://github.com/x0pher/partomatic/issues"
Documentation = "https://partomatic.readthedocs.org"

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = {attr = "partomatic.__version__.__version__"}