[project]
name = "partomatic"
version = "0.6.0"
authors = [
  { name="x0pherl"},
]
description = "build123d Part extended for CI/CD automation"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "build123d",
    "pytest",
    "ocp_vscode",
    "pydantic>=2",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
webui = [
    "nicegui",
]

[project.urls]
Homepage = "https://github.com/x0pherl/partomatic"
Issues = "https://github.com/x0pherl/partomatic/issues"
Documentation = "https://partomatic.readthedocs.org"

[build-system]
requires = ["hatchling", "hatch-vcs"]

build-backend = "hatchling.build"
